--- a/templates/flatpages/contacts_page.html
+++ b/templates/flatpages/contacts_page.html
@@ -1,9 +1,9 @@
 {% extends 'flatpages/default.html' %}
- 
+
 {% block title %}
-    {{ contacts_page.title }}
+    {{ flatpage.title }}
 {% endblock title %}
- 
+
 {% block content %}
     <h2>{{ flatpage.title }}</h2>
     <hr>
