--- a/templates/flatpages/about.html
+++ b/templates/flatpages/about.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ flatpage.title }}</title>
-</head>
-<body>
-{{ flatpage.content }}
-<h4>example flatpage</h4>
-</body>
-</html>
+{% extends 'flatpages/default.html' %}
+
+{% block title %}
+    {{ flatpage.title }}
+{% endblock title %}
+
+{% block content %}
+    <h2>{{ flatpage.title }}</h2>
+    <hr>
+    {{ flatpage.content }}
+    <hr>
+    {{ flatpage.content }}
+{% endblock content %}
