--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Django flatpages - {% block title %} {% endblock title %}</title>
+    <title>Django flatpages - {% block title %} {{ flatpage.title }} {% endblock title %}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home
+                    <a class="nav-link" href="/default/">Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
@@ -51,6 +51,8 @@
         <div class="col-lg-12 text-center">
             {% block content %}
                 {{ flatpage.content }}
+                <hr>
+
             {% endblock content %}
         </div>
     </div>
