made other changes

--- a/feedback/templates/feedback/feedback.html
+++ b/feedback/templates/feedback/feedback.html
@@ -5,6 +5,6 @@
     <title>Age of Darkness: Final Stand</title>
 </head>
 <body>
-
+    <h3>$ git commit -a -m "made other changes"</h3>
 </body>
 </html>
