New face feedback.html

--- a/feedback/templates/feedback/feedback.html
+++ b/feedback/templates/feedback/feedback.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Age of Darkness: Final Stand</title>
+    <title>git switch testing2</title>
 </head>
 <body>
-    <h3>$ git commit -a -m "made other changes"</h3>
+    <h3>Эта страница в ветке testing2</h3>
 </body>
 </html>
