new face in feedback.html in main

--- a/feedback/templates/feedback/feedback.html
+++ b/feedback/templates/feedback/feedback.html
@@ -7,5 +7,7 @@
 <body>
     <h3>Эта страница в ветке testing2</h3>
     <h3>Теперь эта страница слита с веткой main</h3>
+    <h3>Эта страница до изменений в new_testing</h3>
+
 </body>
 </html>
